syntax = "proto3";

package notification;

import "google/protobuf/timestamp.proto";

// email message to be sent
message EmailMessage {
  // id of the message
  string message_id = 1;
  // subject of the email
  string subject = 2;
  // sender of the email
  string sender = 3;
  // recipients of the email
  repeated string recipients = 4;
  // body of the email
  string body = 5;
}

// sms message to be sent
message SmsMessage {
  /// id of the message
  string message_id = 1;
  // sender of the sms
  string sender = 2;
  // recipients of the sms
  repeated string recipients = 3;
  // body of the sms
  string body = 4;
}

// in-app message to be sent
message InAppMessage {
  // id of the message
  string message_id = 1;
  // device id of the device to send the message to
  string device_id = 2;
  // title of the message
  string title = 3;
  // body of the message
  string body = 4;
}

// request to send a message
message SendRequest {
  oneof msg {
    // email message to be sent
    EmailMessage email = 2;
    // sms message to be sent
    SmsMessage sms = 3;
    // in-app message to be sent
    InAppMessage in_app = 4;
  }
}

// response to send a message
message SendResponse {
  // id of the message
  string message_id = 1;
  // timestamp of the message
  google.protobuf.Timestamp timestamp = 2;
}
